--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular": "^1.8.2",
     "angular-animate": "^1.8.2",
     "angular-ui-router": "^1.0.28",
+    "ngx-build-plus": "^10.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,6 +36,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.19.7",
     "codelyzer": "^6.0.0",
+    "html-loader": "^1.3.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
